--- a/assets/css/gioithieu.css
+++ b/assets/css/gioithieu.css
@@ -10,8 +10,9 @@
 .img {
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center center; }
-
+  background-position: center center; 
+  background-clip: content-box;
+}
 @media (max-width: 991.98px) {
   .btn {
     display: block;
@@ -152,8 +153,8 @@
 .work-wrap .img {
   height: 600px !important; }
 
-.work-wrap .text {
-  background: #fff3f1; }
+/* .work-wrap .text {
+  background: #fff3f1; } */
   .work-wrap .text h2 {
     font-size: 30px;
     font-weight: 800;
@@ -193,6 +194,9 @@ span {
 }
 .btn-gt .btn-outline-darks {
 min-width: 250px;
+}
+.p-left20 {
+  padding-left: 20px;
 }
 @media (max-width: 991.98px) {
   .work-wrap .text h2 {
